name:                wai-helloworld
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/snisimu/wai-helloworld#readme
license:             BSD3
license-file:        LICENSE
author:              Shunji Nishimura
maintainer:          snisimu@gmail.com
copyright:           2022 Shunji Nishimura
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wai-helloworld
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  http-types
                    ,  wai
                    ,  warp
